--- a/Codeclash/package.json
+++ b/Codeclash/package.json
@@ -22,6 +22,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "@prisma/client": "^5.16.2"
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.16.2",
+    "next-auth": "^4.24.7"
   }
 }
