--- a/Codeclash/package.json
+++ b/Codeclash/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.2",
-    "next-auth": "^4.24.7"
+    "next-auth": "^4.24.7",
+    "utils": "^0.3.1"
   }
 }
