--- a/Codeclash/package.json
+++ b/Codeclash/package.json
@@ -22,10 +22,12 @@
     "packages/*"
   ],
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.2",
     "@uiw/codemirror-theme-vscode": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
+    "monaco-editor": "^0.50.0",
     "next-auth": "^4.24.7",
     "react-markdown": "^9.0.1",
     "utils": "^0.3.1"
